Changes in UI of admin postal

--- a/QuizMasterClient/QuizMasterClient/index.html
+++ b/QuizMasterClient/QuizMasterClient/index.html
@@ -9,6 +9,7 @@
 
     <!-- Custom CSS files-->
     <link rel="stylesheet" type="text/css" href="Style/login.css">
+    <link rel="stylesheet" type="text/css" href="Style/common.css" />
 
     <!-- Include JS library -->
     <script src="Scripts/Shared/angular.js"></script>
@@ -23,7 +24,7 @@
 
 </head>
 <body id="login" ng-app="loginPortal" ng-controller="loginPortalController">
-
+    <div class="bg-img"></div>
 	<div class="container">
       <form class="form-signin">
         <h2 class="form-signin-heading">Please sign in</h2>
