--- a/QuizMasterClient/QuizMasterClient/index.html
+++ b/QuizMasterClient/QuizMasterClient/index.html
@@ -10,6 +10,9 @@
     <!-- Custom CSS files-->
     <link rel="stylesheet" type="text/css" href="Style/login.css">
     <link rel="stylesheet" type="text/css" href="Style/common.css" />
+    <link rel="icon"
+          type="image/png"
+          href="../../Content/images/icon1.png">
 
     <!-- Include JS library -->
     <script src="Scripts/Shared/angular.js"></script>
@@ -33,7 +36,7 @@
         <label for="inputPassword">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" ng-model="password" ng-model-options="{ getterSetter: true }" required>
         <p class="login-error-message">{{ responseMessage }} </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-disabled="isSubmitButtonDisabled" ng-click="loginSubmit()">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" data-ng-disabled="isSubmitButtonDisabled" ng-click="loginSubmit()"><span class="glyphicon glyphicon-log-in"></span> Log In</button>
       </form>
 
       <p>{{ email }}</p>
