--- a/QuizMasterClient/QuizMasterClient/index.html
+++ b/QuizMasterClient/QuizMasterClient/index.html
@@ -26,7 +26,7 @@
     <script src="Scripts/Controllers/loginPortalController.js"></script>
 
 </head>
-<body id="login" ng-app="loginPortal" ng-controller="loginPortalController">
+<body id="login" ng-app="loginPortal" ng-controller="loginPortalController" ng-init="init()">
     <div class="bg-img"></div>
 	<div class="container">
       <form class="form-signin">
